fix: img class overlapping

--- a/airbnb-main/css/homepage.css
+++ b/airbnb-main/css/homepage.css
@@ -54,7 +54,8 @@ html {
   justify-self: center;
   width: 100%;
 }
-img {
+
+.imgUnit {
   border-radius: 15px;
 }
 
